@@ -7,15 +7,15 @@ describe 'Filter issues', feature: true do
   let!(:user)      { create(:user)}
   let!(:milestone) { create(:milestone, project: project) }
   let!(:label)     { create(:label, project: project) }
-  let!(:issue1)    { create(:issue, project: project) }
   let!(:wontfix)   { create(:label, project: project, title: "Won't fix") }
 
   before do
     project.team << [user, :master]
     login_as(user)
+    create(:issue, project: project)
   end
 
-  describe 'Filter issues for assignee from issues#index' do
+  describe 'for assignee from issues#index' do
     before do
       visit namespace_project_issues_path(project.namespace, project)
 
@@ -45,7 +45,7 @@ describe 'Filter issues', feature: true do
     end
   end
 
-  describe 'Filter issues for milestone from issues#index' do
+  describe 'for milestone from issues#index' do
     before do
       visit namespace_project_issues_path(project.namespace, project)
 
@@ -75,7 +75,7 @@ describe 'Filter issues', feature: true do
     end
   end
 
-  describe 'Filter issues for label from issues#index', js: true do
+  describe 'for label from issues#index', js: true do
     before do
       visit namespace_project_issues_path(project.namespace, project)
       find('.js-label-select').click
@@ -115,6 +115,7 @@ describe 'Filter issues', feature: true do
         expect(page).to have_content wontfix.title
         click_link wontfix.title
       end
+
       expect(find('.js-label-select .dropdown-toggle-text')).to have_content(wontfix.title)
     end
 
@@ -146,7 +147,7 @@ describe 'Filter issues', feature: true do
     end
   end
 
-  describe 'Filter issues for assignee and label from issues#index' do
+  describe 'for assignee and label from issues#index' do
     before do
       visit namespace_project_issues_path(project.namespace, project)
 
@@ -226,6 +227,11 @@ describe 'Filter issues', feature: true do
       it 'filters by text and label' do
         fill_in 'issuable_search', with: 'Bug'
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 2')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 2')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 2)
         end
@@ -236,6 +242,11 @@ describe 'Filter issues', feature: true do
         end
         find('.dropdown-menu-close-icon').click
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 1')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 1')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 1)
         end
@@ -244,6 +255,11 @@ describe 'Filter issues', feature: true do
       it 'filters by text and milestone' do
         fill_in 'issuable_search', with: 'Bug'
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 2')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 2')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 2)
         end
@@ -253,6 +269,11 @@ describe 'Filter issues', feature: true do
           click_link '8'
         end
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 1')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 1')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 1)
         end
@@ -261,6 +282,11 @@ describe 'Filter issues', feature: true do
       it 'filters by text and assignee' do
         fill_in 'issuable_search', with: 'Bug'
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 2')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 2')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 2)
         end
@@ -270,6 +296,11 @@ describe 'Filter issues', feature: true do
           click_link user.name
         end
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 1')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 1')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 1)
         end
@@ -278,6 +309,11 @@ describe 'Filter issues', feature: true do
       it 'filters by text and author' do
         fill_in 'issuable_search', with: 'Bug'
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 2')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 2')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 2)
         end
@@ -287,6 +323,11 @@ describe 'Filter issues', feature: true do
           click_link user.name
         end
 
+        page.within '.issues-state-filters' do
+          expect(page).to have_content('Open 1')
+          expect(page).to have_content('Closed 0')
+          expect(page).to have_content('All 1')
+        end
         page.within '.issues-list' do
           expect(page).to have_selector('.issue', count: 1)
         end
@@ -315,6 +356,11 @@ describe 'Filter issues', feature: true do
       find('.dropdown-menu-close-icon').click
       wait_for_ajax
 
+      page.within '.issues-state-filters' do
+        expect(page).to have_content('Open 2')
+        expect(page).to have_content('Closed 0')
+        expect(page).to have_content('All 2')
+      end
       page.within '.issues-list' do
         expect(page).to have_selector('.issue', count: 2)
       end
